# wdlg

./: .gitignore  LICENSE.txt  README.md  setup.cfg
docs/: index.html
docs_src/: conf.py  index.rst  wdlg.rst
wdlg/: __init__.py  filedialog.py  messagebox.py
