[metadata]
name = wdlg
version = 0.0.1
url = https://github.com/m-m-git/wdlg
description = dialog library for windows
long_description = file: README.md
long_description_content_type = text/markdown
license = Unlicense
license_files = UNLICENSE.txt
platforms = windows
keywords = windows, dialog, dialogs, filedialog, filedialogs
classifiers =
    Environment :: Win32 (MS Windows)
    Intended Audience :: Developers
    License :: OSI Approved :: The Unlicense (Unlicense)
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = wdlg
python_requires = >=3.9
